[gd_scene load_steps=9 format=4 uid="uid://dpam0xn0prbdy"]

[ext_resource type="Script" path="res://level/test_level.gd" id="1_lkkhn"]
[ext_resource type="PackedScene" uid="uid://d0sxlok03prqf" path="res://units/enemy_mob1.tscn" id="2_ggwt4"]
[ext_resource type="PackedScene" uid="uid://ydge52gon0gi" path="res://player/player.tscn" id="3_xesli"]
[ext_resource type="Texture2D" uid="uid://b8wpe2ty1bb4y" path="res://assets/sprites/world_tileset.png" id="4_dajc7"]
[ext_resource type="Texture2D" uid="uid://d0l55kn4w8wku" path="res://assets/backgrounds/level1background.png" id="5_itn0p"]
[ext_resource type="PackedScene" uid="uid://dwe1dpj5ydr26" path="res://gui/hud/hud.tscn" id="6_llqte"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rrnrn"]
texture = ExtResource("4_dajc7")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0

[sub_resource type="TileSet" id="TileSet_3xxd2"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_rrnrn")

[node name="TestLevel" type="Node2D"]
scale = Vector2(1.00413, 0.991191)
script = ExtResource("1_lkkhn")
mob_scene = ExtResource("2_ggwt4")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Hud" parent="CanvasLayer" instance=ExtResource("6_llqte")]
size_flags_vertical = 8

[node name="Player" parent="." instance=ExtResource("3_xesli")]
position = Vector2(-0.995887, 0)

[node name="TileMap" type="Node" parent="."]

[node name="Layer0" type="TileMapLayer" parent="TileMap"]
light_mask = 7
use_parent_material = true
position = Vector2(-24, 33)
scale = Vector2(1.00224, 1.00456)
tile_map_data = PackedByteArray("AAD6/wQAAAAAAAAAAAD7/wQAAAAAAAAAAAD8/wQAAAAAAAAAAAD+/wQAAAAAAAAAAAD9/wQAAAAAAAAAAAD//wQAAAAAAAAAAAAAAAQAAAAAAAAAAAABAAQAAAAAAAAAAAADAAQAAAAAAAAAAAACAAQAAAAAAAAAAAAEAAQAAAAAAAAAAAAFAAQAAAAAAAAAAAAGAAQAAAAAAAAAAAAHAAQAAAAAAAAAAAD5/wQAAAAAAAAAAAD4/wQAAAAAAAAAAAAIAAQAAAAAAAAAAAAJAAQAAAAAAAAAAAD0/wQAAAAAAAAAAAD1/wQAAAAAAAAAAAD2/wQAAAAAAAAAAAD3/wQAAAAAAAAAAADz/wQAAAAAAAAAAADy/wQAAAAAAAAAAADx/wQAAAAAAAAAAADw/wQAAAAAAAAAAADv/wQAAAAAAAAAAADu/wQAAAAAAAAAAADt/wQAAAAAAAAAAADz/wMAAAAAAAAAAADz/wIAAAAAAAAAAADz/wEAAAAAAAAAAADz/wAAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_3xxd2")

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(-155.358, 78.6932)
scale = Vector2(0.995887, 1.00889)

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MobTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -1

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.2, 0.2)
motion_mirroring = Vector2(544, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(40, -5)
scale = Vector2(1.00413, 0.991191)
texture = ExtResource("5_itn0p")

[node name="MobSpawnLocation" type="Marker2D" parent="."]
position = Vector2(50.7902, 80.711)

[node name="BackButton" type="Button" parent="."]
offset_left = -155.358
offset_top = 4.03555
offset_right = -110.359
offset_bottom = 35.0355
scale = Vector2(0.991327, 1)
text = "back"

[connection signal="spawn_mob" from="CanvasLayer/Hud" to="." method="_on_hud_spawn_ally_mob"]
[connection signal="health_changed" from="Player" to="CanvasLayer/Hud" method="_on_player_health_changed"]
[connection signal="player_died" from="Player" to="." method="on_player_died"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
